Atom + atom-latex and preview-inline is nice for writing.

--- a/master-thesis.tex
+++ b/master-thesis.tex
@@ -11,7 +11,7 @@
 \maketitle
 
 \begin{abstract}
-This is an abstract text.
+\include{chapters/abstract/abstract}
 \end{abstract}
 
 \begin{dedication}
@@ -26,8 +26,15 @@ This is an abstract text.
 
 \tableofcontents
 
-\chapter{The beginning is here}
-
-Start your chapter by writing something smart. Then go get coffee.
+\chapter{Introduction}
+\include{chapters/introduction/introduction}
+\chapter{Theory}
+\include{chapters/theory/theory}
+\chapter{Results}
+\include{chapters/results/results}
+\chapter{Discussion}
+\include{chapters/discussion/discussion}
+\chapter{Conclusion}
+\include{chapters/conclusion/conclusion}
 
 \end{document}
