Added a citation to the test. Adding library file and bibstyle.

--- a/master-thesis.tex
+++ b/master-thesis.tex
@@ -37,4 +37,7 @@
 \chapter{Conclusion}
 \include{chapters/conclusion/conclusion}
 
+\bibliographystyle{mybibstyle}
+\bibliography{library.bib}
+
 \end{document}
