Adding more on OLS, changing it to a more familiar text using least squares and cost function

--- a/master-thesis.tex
+++ b/master-thesis.tex
@@ -1,4 +1,30 @@
 \documentclass[twoside,english]{uiofysmaster}
+\usepackage[english]{babel}
+\usepackage{tikz}
+\usepackage{amsmath}
+\usepackage{float}
+\usepackage{mathtools}
+\usepackage[ruled,vlined]{algorithm2e}
+\usepackage{hyperref}
+\usepackage{enumerate}
+\usepackage[shortlabels]{enumitem}
+\usepackage{amssymb}
+\usepackage{subfig}
+\usepackage{makecell}
+\usepackage{array}
+\usepackage{multirow}
+\usepackage{mathpazo}
+\usepackage{siunitx}
+\usepackage{graphicx}
+\usepackage{longtable}
+\usepackage[toc,page]{appendix}
+\usepackage{booktabs}
+\usepackage{tabularx}
+\usepackage{adjustbox}
+\usepackage[section]{placeins}
+\usepackage{pdflscape}
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
 
 %\bibliography{references}
 
