Started nuclear science

--- a/master-thesis.tex
+++ b/master-thesis.tex
@@ -2,6 +2,7 @@
 \usepackage[english]{babel}
 \usepackage{tikz}
 \usepackage{amsmath}
+\usepackage[version=4]{mhchem}
 \usepackage{float}
 \usepackage{mathtools}
 \usepackage[ruled,vlined]{algorithm2e}
