--- a/master-thesis.tex
+++ b/master-thesis.tex
@@ -28,6 +28,7 @@
 \usepackage[T1]{fontenc}
 
 %\bibliography{references}
+\usepackage[numbers]{natbib}
 
 \author{Geir Tore Ulvik}
 \title{Generic master thesis title}
