--- a/master-thesis.tex
+++ b/master-thesis.tex
@@ -27,6 +27,9 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 
+% custom commands
+\newcommand{\colorlinks}[2]{{\hypersetup{allcolors=#1}#2}}
+
 %\bibliography{references}
 \usepackage[numbers]{natbib}
 
