--- a/master-thesis.tex
+++ b/master-thesis.tex
@@ -61,6 +61,8 @@
 \include{chapters/introduction/introduction}
 \chapter{Theory}
 \include{chapters/theory/theory}
+\chapter{Method}
+\include{chapters/method/method}
 \chapter{Results}
 \include{chapters/results/results}
 \chapter{Discussion}
