Updated custom commands. Added multiple segments in theory

--- a/master-thesis.tex
+++ b/master-thesis.tex
@@ -29,6 +29,7 @@
 
 % custom commands
 \newcommand{\colorlinks}[2]{{\hypersetup{allcolors=#1}#2}}
+\newcommand{\bs}[1]{{\boldsymbol{#1}}}
 
 %\bibliography{references}
 \usepackage[numbers]{natbib}
