Small update to activation functions ++

--- a/master-thesis.tex
+++ b/master-thesis.tex
@@ -30,6 +30,8 @@
 % custom commands
 \newcommand{\colorlinks}[2]{{\hypersetup{allcolors=#1}#2}}
 \newcommand{\bs}[1]{{\boldsymbol{#1}}}
+\newcommand{\ddx}[1]{{\frac{\partial #1}{\partial x}}}
+\newcommand{\dd}[2]{{\frac{\partial #1}{\partial #2}}}
 
 %\bibliography{references}
 \usepackage[numbers]{natbib}
