Modified master-thesis.tex and added stuff on logistic regression, experimental background, and regularization

--- a/master-thesis.tex
+++ b/master-thesis.tex
@@ -37,29 +37,21 @@
 \usepackage[numbers]{natbib}
 
 \author{Geir Tore Ulvik}
-\title{Generic master thesis title}
-\date{November 2020}
-
+\title{Supervised Learning in a Low-Energy Nuclear Physics Experiment}
+\date{January 2020}
 \begin{document}
-
 \maketitle
 
-\begin{abstract}
-\include{chapters/abstract/abstract}
-\end{abstract}
-
-\begin{dedication}
-  To someone
-  \\\vspace{12pt}
-  This is a dedication to my cats.
-\end{dedication}
-
-\begin{acknowledgements}
-  I acknowledge my acknowledgements.
-\end{acknowledgements}
-
 \tableofcontents
+\listoffigures
 
+\newpage
+\section*{Acknowledgements}
+Acknowledgement text like lorem ipsum all up in here.
+\newpage
+
+
+\include{chapters/abstract/abstract}
 \chapter{Introduction}
 \include{chapters/introduction/introduction}
 \chapter{Theory}
