Updated text on experimental data with DDAS and fit energies. Removed an itemize list.

--- a/master-thesis.tex
+++ b/master-thesis.tex
@@ -22,6 +22,7 @@
 \usepackage{booktabs}
 \usepackage{tabularx}
 \usepackage{adjustbox}
+\usepackage{listings}
 \usepackage[section]{placeins}
 \usepackage{pdflscape}
 \usepackage[utf8]{inputenc}
@@ -56,7 +57,7 @@ Acknowledgement text like lorem ipsum all up in here.
 \include{chapters/introduction/introduction}
 \chapter{Theory}
 \include{chapters/theory/theory}
-\chapter{Method}
+\chapter{Method and Implementation}
 \include{chapters/method/method}
 \chapter{Results}
 \include{chapters/results/results}
