Updated with appendix

--- a/master-thesis.tex
+++ b/master-thesis.tex
@@ -65,6 +65,9 @@ Acknowledgement text like lorem ipsum all up in here.
 \include{chapters/discussion/discussion}
 \chapter{Conclusion}
 \include{chapters/conclusion/conclusion}
+\begin{appendices}
+    \include{chapters/appendix/appendix}
+\end{appendices}
 
 \bibliographystyle{mybibstyle}
 \bibliography{library.bib}
