Slightly better version maybe

--- a/master-thesis.tex
+++ b/master-thesis.tex
@@ -48,9 +48,16 @@
 
 \newpage
 \section*{Acknowledgements}
-Acknowledgement text like lorem ipsum all up in here.
+Let's just say I'm not considering writing theses as a hobby.
+First, I want to thank my advisors, Morten Hjorth-Jensen and Sean Liddick, for the
+opportunity to work with this exciting problem and yourselves, and Aaron Chester.
+I'd like to thank Robert Solli, my brilliant friend and former roommate, for critical insights
+and fruitful discussions of the topics in this thesis.
+To Hilde, Øyvind, Torgrim, and my other friends, who've been cheering me on - some while writing theses 
+of their own - thank you.
+And to my partner, Iris Anna Berg, your support and words of encouragement kept me going
+when my inner monologue was anything but kind. Thank you.
 \newpage
-
 
 \include{chapters/abstract/abstract}
 \chapter{Introduction}
