--- a/master-thesis.tex
+++ b/master-thesis.tex
@@ -48,7 +48,8 @@
 
 \newpage
 \section*{Acknowledgements}
-Let's just say I'm not considering writing theses as a hobby.
+Let's just say I'm not considering writing theses as a hobby. However, scientific work
+is without a doubt a rewarding process.
 First, I want to thank my advisors, Morten Hjorth-Jensen and Sean Liddick, for the
 opportunity to work with this exciting problem and yourselves, and Aaron Chester.
 I'd like to thank Robert Solli, my brilliant friend and former roommate, for critical insights
